<?php die(); ?>
Social Magick 3.0.0
--------------------------------------------------------------------------------
+ Hide the OpenGraph tab for menu items which are not related to core content