@@ -61,9 +61,11 @@
                 />
 
 
-                <field name="og-templates" type="subform"
+                <field name="og-templates"
+                       type="subform"
                        multiple="true"
-                       label="Template Options" min="1">
+                       label="Template Options"
+                       min="1">
                     <form>
                         <field
                                 name="template-name"
@@ -348,6 +350,7 @@
                     </form>
                 </field>
             </fieldset>
+
             <fieldset name="ogtags"
                       label="PLG_SYSTEM_SOCIALMAGICK_OGTAGS_FIELDSET_LABEL"
                       description="PLG_SYSTEM_SOCIALMAGICK_OGTAGS_FIELDSET_DESC"
